--- a/packages/app/recovery-playbook-orchestrator/tsconfig.json
+++ b/packages/app/recovery-playbook-orchestrator/tsconfig.json
@@ -30,7 +30,13 @@
       "path": "./../../domain/recovery-playbook-orchestration-core/tsconfig.json"
     },
     {
+      "path": "./../../domain/recovery-playbook-observability-core/tsconfig.json"
+    },
+    {
       "path": "./../../data/recovery-playbook-automation-store/tsconfig.json"
+    },
+    {
+      "path": "./../../service/recovery-playbook-observability-orchestrator/tsconfig.json"
     },
     {
       "path": "./../../service/recovery-playbook-automation-engine/tsconfig.json"
