feat(stress-lab): expand advanced orchestration runtime and dashboard modules

--- a/packages/app/recovery-lab-dashboard/package.json
+++ b/packages/app/recovery-lab-dashboard/package.json
@@ -27,6 +27,8 @@
     "@service/recovery-lab-orchestration-studio": "workspace:*",
     "@shared/recovery-lab-kernel": "workspace:*",
     "@shared/type-level": "workspace:*",
+    "@shared/stress-lab-runtime": "workspace:*",
+    "@shared/util": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
