--- a/packages/shared/stress-lab-runtime/package.json
+++ b/packages/shared/stress-lab-runtime/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@shared/core": "workspace:*",
-    "@shared/type-level": "workspace:*"
+    "@shared/type-level": "workspace:*",
+    "@shared/util": "workspace:*"
   }
 }
