--- a/packages/app/recovery-lab-dashboard/tsconfig.json
+++ b/packages/app/recovery-lab-dashboard/tsconfig.json
@@ -23,6 +23,7 @@
     { "path": "./../../service/recovery-lab-orchestrator/tsconfig.json" },
     { "path": "./../../service/recovery-lab-orchestration-studio/tsconfig.json" },
     { "path": "./../../shared/recovery-lab-kernel/tsconfig.json" },
+    { "path": "./../../shared/stress-lab-runtime/tsconfig.json" },
     { "path": "./../../shared/type-level/tsconfig.json" },
     { "path": "./../../domain/recovery-lab-synthetic-orchestration/tsconfig.json" },
     { "path": "./../../service/recovery-lab-graph-orchestrator/tsconfig.json" },
