feat(recovery): add recovery workbench orchestration stack

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -45,6 +45,7 @@
     "@shared/orchestration-lab-core": "workspace:*",
     "@shared/orchestration-kernel": "workspace:*",
     "@shared/recovery-orchestration-runtime": "workspace:*",
+    "@shared/recovery-workbench-runtime": "workspace:*",
     "@domain/recovery-command-forge": "workspace:*",
     "@domain/incident-command-models": "workspace:*",
     "@domain/recovery-operations-models": "workspace:*",
@@ -118,6 +119,8 @@
     "@domain/recovery-stress-lab-intelligence": "workspace:*",
     "@domain/recovery-quantum-orchestration": "workspace:*",
     "@data/recovery-quantum-store": "workspace:*",
+    "@domain/recovery-workbench-models": "workspace:*",
+    "@service/recovery-workbench-orchestrator": "workspace:*",
     "@shared/recovery-quantum-runtime": "workspace:*",
     "@domain/recovery-orchestration-design": "workspace:*",
     "@data/recovery-temporal-store": "workspace:*",
