feat: expand recovery lab adaptive orchestration simulation stack

--- a/packages/app/recovery-lab-dashboard/package.json
+++ b/packages/app/recovery-lab-dashboard/package.json
@@ -29,6 +29,7 @@
     "@shared/type-level": "workspace:*",
     "@shared/stress-lab-runtime": "workspace:*",
     "@shared/util": "workspace:*",
+    "@service/recovery-ops-orchestration-engine": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
