--- a/packages/service/recovery-ops-orchestration-engine/tsconfig.json
+++ b/packages/service/recovery-ops-orchestration-engine/tsconfig.json
@@ -29,6 +29,9 @@
     },
     {
       "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/stress-lab-runtime/tsconfig.json"
     }
   ]
 }
