--- a/packages/domain/recovery-ops-orchestration-lab/package.json
+++ b/packages/domain/recovery-ops-orchestration-lab/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@shared/type-level": "workspace:*",
     "@shared/core": "workspace:*",
+    "@shared/typed-orchestration-core": "workspace:*",
     "zod": "^3.24.2"
   }
 }
