--- a/packages/service/recovery-ops-orchestration-engine/package.json
+++ b/packages/service/recovery-ops-orchestration-engine/package.json
@@ -8,7 +8,7 @@
     ".": "./src/index.ts",
     "./src": "./src/index.ts",
     "./*": "./src/*.ts",
-    "./src/*": "./src/*.ts"
+    "./src/*": "./src/*"
   },
   "scripts": {
     "build": "tsc -b"
@@ -18,9 +18,11 @@
     "@domain/recovery-ops-orchestration-surface": "workspace:*",
     "@domain/recovery-ops-orchestration-lab": "workspace:*",
     "@data/recovery-ops-orchestration-store": "workspace:*",
+    "@shared/stress-lab-runtime": "workspace:*",
     "@shared/core": "workspace:*",
     "@shared/result": "workspace:*",
     "@shared/type-level": "workspace:*",
+    "@shared/typed-orchestration-core": "workspace:*",
     "zod": "^3.24.0"
   }
 }
