--- a/packages/app/recovery-incident-dashboard/tsconfig.json
+++ b/packages/app/recovery-incident-dashboard/tsconfig.json
@@ -179,6 +179,9 @@
       "path": "./../../shared/recovery-orchestration-runtime/tsconfig.json"
     },
     {
+      "path": "./../../shared/recovery-orchestration-surface/tsconfig.json"
+    },
+    {
       "path": "./../../service/recovery-chaos-lab-console-orchestrator/tsconfig.json"
     },
     {
