feat: expand quantum studio core and cockpit modules for advanced TS stress

--- a/packages/app/recovery-cockpit-ui/tsconfig.json
+++ b/packages/app/recovery-cockpit-ui/tsconfig.json
@@ -97,6 +97,9 @@
     },
     {
       "path": "./../../shared/ops-orchestration-runtime/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/quantum-studio-core/tsconfig.json"
     }
   ]
 }
