--- a/packages/data/recovery-cockpit-store/package.json
+++ b/packages/data/recovery-cockpit-store/package.json
@@ -8,13 +8,14 @@
     ".": "./src/index.ts",
     "./src": "./src/index.ts",
     "./*": "./src/*.ts",
-    "./src/*": "./src/*.ts"
+    "./src/*": "./src/*"
   },
   "scripts": {
     "build": "tsc -b"
   },
   "dependencies": {
     "@domain/recovery-cockpit-models": "workspace:*",
+    "@domain/recovery-cockpit-orchestration-core": "workspace:*",
     "@shared/result": "workspace:*",
     "@shared/util": "workspace:*"
   }
