--- a/packages/data/recovery-cockpit-store/tsconfig.json
+++ b/packages/data/recovery-cockpit-store/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "./../../domain/recovery-cockpit-models/tsconfig.json"
     },
     {
+      "path": "./../../domain/recovery-cockpit-orchestration-core/tsconfig.json"
+    },
+    {
       "path": "./../../shared/result/tsconfig.json"
     },
     {
