--- a/packages/domain/recovery-cockpit-orchestration-core/tsconfig.json
+++ b/packages/domain/recovery-cockpit-orchestration-core/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "./../../shared/util/tsconfig.json"
     },
     {
+      "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
       "path": "./../../domain/recovery-cockpit-models/tsconfig.json"
     }
   ]
