--- a/packages/service/recovery-cockpit-orchestrator/tsconfig.json
+++ b/packages/service/recovery-cockpit-orchestrator/tsconfig.json
@@ -34,6 +34,9 @@
       "path": "./../../shared/util/tsconfig.json"
     },
     {
+      "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
       "path": "./../../shared/result/tsconfig.json"
     },
     {
