feat: add advanced recovery-lab intelligence orchestration modules

--- a/packages/domain/recovery-lab-intelligence-core/package.json
+++ b/packages/domain/recovery-lab-intelligence-core/package.json
@@ -18,6 +18,7 @@
     "@shared/core": "workspace:*",
     "@shared/result": "workspace:*",
     "@shared/type-level": "workspace:*",
+    "@shared/observability-contracts": "workspace:*",
     "zod": "^3.24.0"
   }
 }
