--- a/packages/app/recovery-cockpit-ui/tsconfig.json
+++ b/packages/app/recovery-cockpit-ui/tsconfig.json
@@ -103,6 +103,9 @@
     },
     {
       "path": "./../../shared/quantum-studio-core/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-command-lattice-core/tsconfig.json"
     }
   ]
 }
