--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1407,6 +1407,12 @@
     },
     {
       "path": "./packages/service/recovery-autonomy-experiment-orchestrator"
+    },
+    {
+      "path": "./packages/shared/command-graph-kernel"
+    },
+    {
+      "path": "./packages/domain/recovery-command-lattice-core"
     }
   ]
 }
