feat: stress-ts workspace synthesis advanced stream and orchestration models

--- a/packages/app/recovery-incident-dashboard/tsconfig.json
+++ b/packages/app/recovery-incident-dashboard/tsconfig.json
@@ -173,6 +173,9 @@
       "path": "./../../shared/type-level/tsconfig.json"
     },
     {
+      "path": "./../../shared/recovery-synthesis-runtime/tsconfig.json"
+    },
+    {
       "path": "./../../shared/scenario-design-kernel/tsconfig.json"
     },
     {
