--- a/packages/domain/recovery-scenario-lens/package.json
+++ b/packages/domain/recovery-scenario-lens/package.json
@@ -14,6 +14,7 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@shared/recovery-synthesis-runtime": "workspace:*",
     "@shared/type-level": "workspace:*",
     "@shared/core": "workspace:*",
     "zod": "^3.24.0"
