--- a/packages/domain/recovery-ecosystem-analytics/package.json
+++ b/packages/domain/recovery-ecosystem-analytics/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@shared/type-level": "workspace:*",
     "@shared/typed-orchestration-core": "workspace:*",
+    "@shared/result": "workspace:*",
     "zod": "^3.24.0"
   }
 }
