--- a/packages/domain/recovery-ecosystem-analytics/tsconfig.json
+++ b/packages/domain/recovery-ecosystem-analytics/tsconfig.json
@@ -14,6 +14,9 @@
     },
     {
       "path": "../../shared/typed-orchestration-core/tsconfig.json"
+    },
+    {
+      "path": "../../shared/result/tsconfig.json"
     }
   ]
 }
