--- a/packages/app/recovery-ecosystem-console/tsconfig.json
+++ b/packages/app/recovery-ecosystem-console/tsconfig.json
@@ -46,6 +46,9 @@
     },
     {
       "path": "../../data/recovery-lens-observability-store/tsconfig.json"
+    },
+    {
+      "path": "../../domain/recovery-ecosystem-orchestrator-core/tsconfig.json"
     }
   ]
 }
