--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -42,6 +42,7 @@
     "@shared/core": "workspace:*",
     "@shared/util": "workspace:*",
     "@shared/type-level": "workspace:*",
+    "@shared/recovery-intent-graph-runtime": "workspace:*",
     "@domain/recovery-lab-console-labs": "workspace:*",
     "@shared/orchestration-lab-core": "workspace:*",
     "@shared/orchestration-kernel": "workspace:*",
