chore(stress-lab): extend checker workload scaffolding

--- a/packages/domain/recovery-lab-stress-lab-core/tsconfig.json
+++ b/packages/domain/recovery-lab-stress-lab-core/tsconfig.json
@@ -11,6 +11,9 @@
   "references": [
     {
       "path": "./../../shared/orchestration-lab-core/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-lab-synthetic-orchestration/tsconfig.json"
     }
   ]
 }
