--- a/packages/domain/recovery-lab-synthetic-orchestration/package.json
+++ b/packages/domain/recovery-lab-synthetic-orchestration/package.json
@@ -14,6 +14,7 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@shared/type-level": "workspace:*",
     "@shared/lab-graph-runtime": "workspace:*"
   }
 }
