--- a/packages/app/adaptive-ops-console/package.json
+++ b/packages/app/adaptive-ops-console/package.json
@@ -38,6 +38,8 @@
     "@domain/recovery-stress-lab": "workspace:*",
     "@service/recovery-lattice-orchestrator": "workspace:*",
     "@domain/recovery-lattice": "workspace:*",
+    "@domain/recovery-lab-stress-lab-core": "workspace:*",
+    "@domain/recovery-lab-synthetic-orchestration": "workspace:*",
     "@service/recovery-incident-intent-orchestrator": "workspace:*"
     ,
     "@service/recovery-horizon-observability-orchestrator": "workspace:*"
