--- a/packages/app/adaptive-ops-console/tsconfig.json
+++ b/packages/app/adaptive-ops-console/tsconfig.json
@@ -72,6 +72,12 @@
       "path": "./../../domain/recovery-stress-lab/tsconfig.json"
     },
     {
+      "path": "./../../domain/recovery-lab-stress-lab-core/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-lab-synthetic-orchestration/tsconfig.json"
+    },
+    {
       "path": "./../../service/recovery-lattice-orchestrator/tsconfig.json"
     },
     {
