chore: expand stress workload type-level and dashboard stress patterns

--- a/packages/domain/recovery-lab-stress-lab-core/package.json
+++ b/packages/domain/recovery-lab-stress-lab-core/package.json
@@ -14,6 +14,7 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@shared/type-level": "workspace:*",
     "@domain/recovery-lab-synthetic-orchestration": "workspace:*",
     "@shared/orchestration-lab-core": "workspace:*"
   }
