feat(ts): expand stress workload and type-level stress surfaces

--- a/packages/app/recovery-cockpit-ui/package.json
+++ b/packages/app/recovery-cockpit-ui/package.json
@@ -35,6 +35,7 @@
     "@shared/ops-orchestration-runtime": "workspace:*",
     "@shared/quantum-studio-core": "workspace:*",
     "@service/recovery-orchestration-studio-engine": "workspace:*",
+    "@shared/type-level": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
