feat: expand compiler stress harness with deep type workloads

--- a/packages/app/adaptive-ops-console/package.json
+++ b/packages/app/adaptive-ops-console/package.json
@@ -40,6 +40,7 @@
     "@domain/recovery-lattice": "workspace:*",
     "@domain/recovery-lab-stress-lab-core": "workspace:*",
     "@domain/recovery-lab-synthetic-orchestration": "workspace:*",
+    "@shared/type-level": "workspace:*",
     "@service/recovery-incident-intent-orchestrator": "workspace:*"
     ,
     "@service/recovery-horizon-observability-orchestrator": "workspace:*"
