Add ts stress type-level workloads and stress dashboard integration

--- a/packages/shared/type-level/tsconfig.json
+++ b/packages/shared/type-level/tsconfig.json
@@ -8,5 +8,12 @@
   "include": [
     "src/**/*"
   ],
-  "references": []
+  "references": [
+    {
+      "path": "../util/tsconfig.json"
+    },
+    {
+      "path": "../result/tsconfig.json"
+    }
+  ]
 }
