--- a/packages/shared/type-level/package.json
+++ b/packages/shared/type-level/package.json
@@ -14,6 +14,8 @@
     "build": "tsc -b"
   },
   "dependencies": {
-    "zod": "^3.24.0"
+    "zod": "^3.24.0",
+    "@shared/util": "workspace:*",
+    "@shared/result": "workspace:*"
   }
 }
