chore: stabilize type-level stress modules and unblock recursive checker build

--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -121,6 +121,9 @@
       "path": "../../shared/result/tsconfig.json"
     },
     {
+      "path": "../../shared/type-level-hub/tsconfig.json"
+    },
+    {
       "path": "../../shared/result/tsconfig.json"
     },
     {
