--- a/packages/domain/recovery-orchestration-planning/tsconfig.json
+++ b/packages/domain/recovery-orchestration-planning/tsconfig.json
@@ -16,6 +16,9 @@
       "path": "./../../shared/type-level/tsconfig.json"
     },
     {
+      "path": "./../../shared/type-level-hub/tsconfig.json"
+    },
+    {
       "path": "./../../shared/result/tsconfig.json"
     }
   ]
