--- a/packages/domain/recovery-orchestration-planning/package.json
+++ b/packages/domain/recovery-orchestration-planning/package.json
@@ -14,6 +14,7 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@shared/type-level-hub": "workspace:*",
     "zod": "^3.24.0",
     "@shared/core": "workspace:*",
     "@shared/type-level": "workspace:*",
