--- a/packages/app/recovery-cockpit-ui/tsconfig.json
+++ b/packages/app/recovery-cockpit-ui/tsconfig.json
@@ -48,6 +48,9 @@
       "path": "./../../shared/type-level/tsconfig.json"
     },
     {
+      "path": "./../../shared/type-level-hub/tsconfig.json"
+    },
+    {
       "path": "./../../domain/recovery-cockpit-workloads/tsconfig.json"
     },
     {
